cocurricular buttons overlapping on mobile issue fixed

--- a/src/styles/_cocurricular.less
+++ b/src/styles/_cocurricular.less
@@ -173,7 +173,11 @@
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
     min-height: auto;
+  
+  
   }
+
+
 
   .cocurricular-left {
     padding-top: 0;
@@ -215,6 +219,10 @@
 
   .cocurricular-section .container-fluid {
     min-height: 50.625rem;
+
+     .cocurricular-content{
+    min-height: 700px;
+  }
   }
 }
 
